test/types/string/bradc/string2complex/badStringToImag2.chpl
var s = "1.2j";

var c = s:imag(64);
